Fix overflow on cog and cloud images and increase opacity

--- a/responsive-layout-challenge/css/style.css
+++ b/responsive-layout-challenge/css/style.css
@@ -66,7 +66,8 @@ body {
 .hero {
 	border: 10px solid salmon;
 	position: relative;
-	background-color: rgba(118, 156, 242, 0.5);
+	overflow: hidden;
+	background-color: rgba(118, 156, 242, 0.25);
 }
 
 .cog-main, .cloud-main {
@@ -81,8 +82,7 @@ body {
 	.cog-main, .cloud-main {
 		display: flex;
 		position: absolute;
-		overflow: hidden;
-		fill: rgba(0,0,0,0.5);
+		fill: rgba(0,0,0,0.25);
 		max-width: 400px;
 	}
 
@@ -141,6 +141,7 @@ body {
 .main {
 	position: relative;
 	border: 10px solid gold;
+	overflow: hidden;
 }
 
 .cog-main2 {
@@ -151,10 +152,9 @@ body {
 	.cog-main2 {
 		display: flex;
 		position: absolute;
-		bottom:-100px;
-		right:-100px;
-		overflow: hidden;
-		fill: rgba(0,0,0,0.5);
+		bottom:-250px;
+		right:-75px;
+		fill: rgba(0,0,0,0.25);
 		max-width: 200px;
 /*	can't get this to sit in the right spot!!	*/
 	}
